    * Field refactoring - ! possible break change ! - sorry for that
        - FieldStorageInterface - getvalue, getfist, getlist methods
        - new func converter name, and no default converter
        - all default values are not convert now
    * Some old classes, functions, attributes and parameters are notified
      as deprecated, and will be deleted in next major version.

==== 2.6.3 ====
    * HTTPException has status_code property
    * Implicit value for not set cookie is None or empty dict for OpenAPI
    * Fix Content-Length header when partial Response

==== 2.6.1 ====
    * Fix OpenAPI Core wrappers

==== 2.6.0 ====
    * Running on MS Windows fix
    * UTF-8 HTTP Digest username support
    * JSONResponse support all response type now (data argument)
    * EmptyResponse replaced by NoContentResponse
    * new NotModifiedResponse
    * time_to_http, datetime_to_http, http_to_datetime and http_to_time header
      functions for manipulating Date type headers
    * FileResponse generates Last-Modified header now
    * Response and FileObjResponse can be partial
    * JSONResponse Encoder arguments
    * Generator responses can be partial
    * Special PartialResponse class
    * Fix set_profile method
    * Fix logging messages

==== 2.5.0 ====
    * fix file callback on files smaller than 1000B
    * add FileObjResponse class
    * add BaseResponse class
    * unicode support in url path
    * call file_callback only for files entries (with filename)
    * fix openapi wrapper mime type
    * Session use JSON for secority issue
    * Bad JSON request generate HTTP Bad Request response
      * All error handlers has error named argument
    * new examples
      * large_file.py - own file_callback for uploading large data
      * websocket.py - websocket simple chat example
    * new TextResponse class
    * CachedInput for faster upload
    * Default Output data buffer is 65365 now
    * rename before_request to before_response