@@ -2,7 +2,7 @@
         <div class="line"></div>
         <div class="credit">
             Create by Ondřej Tůma (<a href="http://ipv6.mcbig.cz">McBig</a>).
-            &copy; 2020. Generate by
+            &copy; 2024. Generate by
             <a href="http://poorhttp.zeropage.cz/jinja24doc.html">Jinja24doc</a>.
         </div>
       </div>
